--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     "default_icon": "assets/raver.png"
   },
   "background": {
-    "service_worker": "background.js",
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
